src/test/deca/context/invalid/object/badCall5.deca
class A
{
  int x(int a)
  {
    return 7;
  }
}
class X
{
  int a ;
  void m()
  {
    C c = new C();
    B b = new B();
    println(b.x(7.6));
  }
}
class B extends A
{

}

class C extends X
{
  int x()
  {
    return 4;
  }
}
